--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "grunt-contrib-cssmin": "^0.12.2",
     "grunt-contrib-uglify": "^0.8.0",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-filerev": "^2.2.0",
     "grunt-pleeease": "^1.3.1",
     "grunt-sass": "^0.18.0"
   }
