--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "flexbox-mobile-dropdown-nav",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Flexbox Mobile Navigation",
   "main": "index.html",
   "scripts": {
@@ -17,19 +17,19 @@
     "Navigation"
   ],
   "author": "Cory Dowdy",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/cdowdy/flexbox-mobile-dropdown-nav/issues"
   },
   "homepage": "https://github.com/cdowdy/flexbox-mobile-dropdown-nav",
   "dependencies": {
     "grunt": "^0.4.5",
-    "grunt-browser-sync": "^2.0.0",
-    "grunt-contrib-cssmin": "^0.12.2",
-    "grunt-contrib-uglify": "^0.8.0",
+    "grunt-browser-sync": "^2.1.3",
+    "grunt-contrib-cssmin": "^0.13.0",
+    "grunt-contrib-uglify": "^0.9.2",
     "grunt-contrib-watch": "^0.6.1",
-    "grunt-filerev": "^2.2.0",
+    "grunt-filerev": "^2.3.1",
     "grunt-pleeease": "^1.3.1",
-    "grunt-sass": "^0.18.0"
+    "grunt-sass": "^1.0.0"
   }
 }
